--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola mundo</title>
+    <title>Hola mundo en mac</title>
 </head>
 <body>
     Hola mundo
     <script src="01-tipos/09-argumentos.js"></script>
 </body>
-</html>
+</html> 
