Add: Sección de operadores en JS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hola mundo
-    <script src="01-tipos/09-argumentos.js"></script>
+    <script src="02-operadores/08-ternario.js"></script>
 </body>
 </html> 
