--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hola mundo
-<script src="03-control-flujo/10-switch.js"></script>
+<script src="04-ejercicios/10.js"></script>
 </body>
 </html> 
