Add: Sección de objetos en JS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hola mundo
-<script src="04-ejercicios/10.js"></script>
-</body>
+<script src="05-objetos/09-list-props.js"></script>
+</body> 
 </html> 
